# vizzu-builder

./: .gitignore  CONTRIBUTING.md  README.md  app.py  filter_data.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
presets/: convert.py  presets.csv  presets.json
sample/: sales.csv
src/: chart.py  story.py
src/data/: filter.py  loader.py  parser.py
src/vizzu_builder/: __init__.py  chart.py  story.py
src/vizzu_builder/chart/: configurator.py  generator.py  updater.py
src/vizzu_builder/config/: presets.json  presets.py  unset.py
src/vizzu_builder/config/presets/: __init__.py  d1m1.py  d1m2.py  d2m1.py  d2m2.py  palettes.py  style.py
src/vizzu_builder/data/: configurator.py  filter.py  generator.py  loader.py  parser.py
src/vizzu_builder/story/: configurator.py  generator.py
